--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.getkeepsafe.dexcount'
 apply plugin: 'com.antfortune.freeline'
 
+apply from: rootProject.projectDir.absolutePath + '/config.gradle'
+
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion project.ext.compileSdkVersion
+    buildToolsVersion project.ext.buildToolsVersion
 
     dexcount {
         format = "list"
@@ -26,8 +28,8 @@ android {
 
     defaultConfig {
         applicationId "com.noo.app"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion project.ext.minSdkVersion
+        targetSdkVersion project.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -89,7 +91,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test:runner:1.0.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-
     compile project(':core')
     compile 'com.pnikosis:materialish-progress:1.0'
     compile 'com.facebook.stetho:stetho:1.4.2'
@@ -101,8 +102,8 @@ dependencies {
     compile 'com.cleveroad:fireworkypulltorefresh:1.0.3'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.cjj.materialrefeshlayout:library:1.3.0'
-
     // google easy permission
     implementation 'pub.devrel:easypermissions:1.1.2'
+    implementation project(':mvp')
 }
 
