--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,13 +2,15 @@ apply plugin: 'com.android.library'
 
 apply plugin: 'realm-android'
 
+apply from: rootProject.projectDir.absolutePath + '/config.gradle'
+
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion project.ext.compileSdkVersion
+    buildToolsVersion project.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion project.ext.minSdkVersion
+        targetSdkVersion project.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -35,15 +37,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:design:' + rootProject.ext.supportLibraryVersion
-    compile 'com.android.support:appcompat-v7:' + rootProject.ext.supportLibraryVersion
+    compile 'com.android.support:design:' + project.ext.supportLibraryVersion
+    compile 'com.android.support:appcompat-v7:' + project.ext.supportLibraryVersion
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.uphyca:stetho_realm:2.0.0'
     testCompile 'junit:junit:4.12'
 
     // Set this dependency to build and run Espresso tests
     testCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-    testCompile 'com.android.support:support-annotations:' + rootProject.ext.supportLibraryVersion
+    testCompile 'com.android.support:support-annotations:' + project.ext.supportLibraryVersion
 
     // http request
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
